still making design

--- a/vite-project/src/components/filterpan/Advanced.css
+++ b/vite-project/src/components/filterpan/Advanced.css
@@ -53,7 +53,7 @@ left: 495px;
 top: 265px;
 margin: 10px;
 border: 1px solid #000000;
-font-size: 20px;
+font-size: 20fcepx;
 }
 .year{
     width: 155px;
